[project]
name = "anonxmusic"
version = "3.0.3"
description = "Telegram Group Calls Streaming bot with some useful features."
readme = ".github/README.md"
requires-python = ">=3.10"

dependencies = [
    "aiohttp~=3.14.1",
    "kurigram>=2.2.23",
    "pillow~=12.2.0",
    "psutil~=7.2.2",
    "py-tgcalls~=2.3.0",
    "youtube-search-python",
    "youtube-search",
    "yt-search-py==1.0.0",
    "py-yt-search~=0.7.2",
    "pymongo>=4.17.0",
    "pytgcrypto>=1.2.12",
    "python-dotenv~=1.2.2",
    "speedtest-cli>=2.1.3",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "yt-dlp[default]>=2026.6.9",
]
